# commbank.eth

./: .gitignore  .prettierignore  AUTH.md  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-check.yml  deploy-ipfs.yml  pinata-upload.yml  pr-build.yml  test-client-v2-build.yml
circuits/: README.md
circuits/deposit/: Nargo.toml
circuits/keccak-circuits/: README.md
circuits/pum_lib/: Nargo.toml
circuits/src/: main.nr
circuits/transfer/: Nargo.toml
circuits/transfer_external/: Nargo.toml
circuits/warp/: Nargo.toml
circuits/withdraw/: Nargo.toml
client/: README.md  bun.lockb  components.json  fleek.config.json  next.config.mjs  package.json  vite.config.ts
client-v2/: ACCOUNT.md  index.html  package.json  vite.config.ts
client-v2/public/: full-tree.json
client-v2/scripts/: README.md  deploy-to-ipfs.ts
client-v2/src/: App.tsx  index.css
client/.storybook/: main.ts  preview.tsx
client/_scripts/: deploy-site-to-ipfs.ts
client/app/: globals.css  layout.tsx  loading.tsx  page.tsx
client/const/: erc20-abi.ts  (+4 more)
contracts/: .gitignore  README.md  alice.json  bun.lockb  hardhat.config.ts  old.hardhat.config.ts  package.json  tsconfig.json
indexer/: .gitignore  Dockerfile  config.yaml  package.json  schema.graphql
relayer/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  package.json
relayer/src/: constants.ts  helpers.ts  index.ts  main.rs  types.ts
rsa/: Nargo.toml
rust-rsa/: Cargo.toml  README.md
server/: README.md  package.json
shared/: package.json
(+449 files in other folders)
