[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
alloy = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
